syntax = "proto3";

package hotel;

option go_package = "./proto";

service HotelService {
  // 1. Unary RPC - Busca simples de hot√©is
  rpc SearchHotels(SearchHotelsRequest) returns (SearchHotelsResponse);

  // 2. Client Streaming RPC - Finalizar compra do carrinho
  rpc FinalizarCompra(stream ItemCarrinho) returns (RespostaCompra);

  // 3. Bidirectional Streaming RPC - Chat de suporte
  rpc ChatSuporte(stream ChatMessage) returns (stream ChatMessage);
}

message SearchHotelsRequest {
  string city = 1;
  int32 min_stars = 2;
  int32 max_stars = 3;
  double min_price = 4;
  double max_price = 5;
  string accommodation_type = 6;
  string order_by = 7; // "price" or "rating"
  int32 delay_seconds = 8; // for performance testing
}

message SearchHotelsResponse {
  repeated Hotel hotels = 1;
  bool has_availability = 2;
}

message Hotel {
  string id = 1;
  string name = 2;
  string city = 3;
  int32 stars = 4;
  double price = 5;
  bool available = 6;
  repeated string amenities = 7;
  string accommodation_type = 8;
}

// Mensagens para FinalizarCompra (Client Streaming)
message ItemCarrinho {
  string tipo = 1; // "voo", "hotel", "pacote"
  string id = 2;
  string detalhes = 3; // JSON com detalhes do item
  double preco = 4;
}

message RespostaCompra {
  bool sucesso = 1;
  string codigo_confirmacao = 2;
  double valor_total = 3;
  int32 total_itens = 4;
  repeated string erros = 5;
  string timestamp = 6;
}

// Mensagens para ChatSuporte (Bidirectional Streaming)
message ChatMessage {
  string usuario = 1; // "cliente" ou "suporte"
  string mensagem = 2;
  string timestamp = 3;
  string contexto = 4; // "voo", "hotel", "pacote", "geral"
}
